<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    style="@android:style/Theme.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvProv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/prov"
            android:textSize="22sp" >
        </TextView>

        <TextView
            android:id="@+id/tvProvVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/none"
            android:textSize="22sp" >
        </TextView>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/lat"
            android:textSize="22sp" >
        </TextView>

        <TextView
            android:id="@+id/tvLatVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/unk"
            android:textSize="22sp" >
        </TextView>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/lon"
            android:textSize="22sp" >
        </TextView>

        <TextView
            android:id="@+id/tvLonVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/unk"
            android:textSize="22sp" >
        </TextView>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvKvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/kValue"
            android:textSize="22sp" >
        </TextView>

        <Spinner
            android:id="@+id/kValueSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textSize="22sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/tvcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/categories"
            android:textSize="22sp" >
        </TextView>

        <Spinner
            android:id="@+id/catSpinner"
            style="@android:style/Theme.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/categories"
            android:textSize="33dp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/textPOISlider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="# of POIs"
            android:textStyle="bold" />

    
        <SeekBar
            android:id="@+id/POISlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="17"
            android:progress="0" />

</TableRow><TableRow>
        <TextView
            android:id="@+id/currentPOIValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />
        
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bn_retrieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="retrieveCloseRoutes"
            android:text="@string/retrieve" />
        <!--
       <Button
            android:id="@+id/bn_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showMap"
            android:text="@string/showMap" /> 
        <Button
            android:id="@+id/bn_mapPOI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showPOIMap"
            android:text="@string/showPOIMap" />        -->
    </TableRow>

</TableLayout>